fix: 댄서 이미지 오류 수정(#27)